--- a/style.css
+++ b/style.css
@@ -14,39 +14,23 @@ input, select, textarea {
 	vertical-align: middle;
 	font: 100% arial, helvetica, sans-serif;
 }
-a {
-	color: #000;
-	text-decoration: none;
-}
-a:hover {text-decoration: none;}
-* {
-	box-sizing:border-box;
-	-webkit-box-sizing:border-box;
-	-moz-box-sizing:border-box;
-	-o-box-sizing:border-box;
-	-ms-box-sizing:border-box;
-}
-h1, h2, h3 {
-	margin: 0;
-	font-weight: normal;
-}
 ul {list-style: none;
    margin: 0;
  }
 /* General settings */
-.tabs {
+#tabContainer {
 	width: 100%;
 	background: #EFEFEF;
 	margin: 2px 0 30px;
 }
-.tabs__caption {
+#tabs__caption {
 	height: 28px;
 	line-height: 25px;
 	list-style: none;
 	border-bottom: 1px solid #DDD;
 	background: #FFF;
 }
-.tabs__caption li {
+[id^=tabHeader_] {
 	float: left;
 	display: inline;
 	margin: 0 1px -1px 0;
@@ -59,27 +43,27 @@ ul {list-style: none;
 	border-radius: 10px 10px 2px 2px;
 	position: relative;
 }
-.tabs__caption li:hover {
+[id^=tabHeader_]:hover {
 	color: #187d95;
 	padding: 0 13px;
 	background: #edf2c8;
 	border: 1px solid #b7d7f0;
 }
-.tabs__caption .active {
+[id^=tabHeader_].active {
 	color: #444;
 	background: #EFEFEF;
 	padding: 0 13px 2px;
 	border: 1px solid #D4D4D4;
 	border-bottom: 1px solid #EFEFEF;
 }
-.tabs__content {
+[id^=tabs__content] {
 	display: none;
 	border: 1px solid #D4D4D4;
 	border-width: 0 1px 1px;
 	background: #EFEFEF;
 	padding: 0 2px;
 }
-.tabs__content.active {
+[id^=tabs__content].active {
 	display: block;
 }
 
